--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
